--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview",
     "start": "node server.js"
   },
-  "dependencies": {
-    "d3-color": "^3.1.0",
-    "d3-scale": "^4.0.2",
-    "leaflet": "^1.9.4",
-    "lodash": "^4.17.21",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-leaflet": "^5.0.0",
-    "react-simple-maps": "^1.0.0"
-  },
+"dependencies": {
+  "d3-color": "^3.1.0",
+  "d3-scale": "^4.0.2",
+  "leaflet": "^1.9.4",
+  "lodash": "^4.17.21",
+  "react": "^16.14.0",
+  "react-dom": "^16.14.0",
+  "react-leaflet": "^3.2.5",
+  "react-simple-maps": "^1.0.0",
+    "express": "^4.18.2"
+},
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
@@ -30,5 +31,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "vite": "^6.2.0"
-  }
+  },
+  "engines": {
+  "node": "18.x"
+}
 }
