--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "preview": "vite preview",
     "start": "node server.js"
   },
-"dependencies": {
-  "d3-color": "^3.1.0",
-  "d3-scale": "^4.0.2",
-  "leaflet": "^1.9.4",
-  "lodash": "^4.17.21",
-  "react": "^16.14.0",
-  "react-dom": "^16.14.0",
-  "react-leaflet": "^3.2.5",
-  "react-simple-maps": "^1.0.0",
-    "express": "^4.18.2"
-},
+  "dependencies": {
+    "d3-color": "^3.1.0",
+    "d3-scale": "^4.0.2",
+    "express": "^4.18.2",
+    "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
+    "react-simple-maps": "^1.0.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
@@ -33,6 +33,6 @@
     "vite": "^6.2.0"
   },
   "engines": {
-  "node": "18.x"
+  "node": "16.x"
 }
 }
