--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-prebuild": "npm install --no-package-lock"
   },
   "dependencies": {
     "d3-color": "^3.1.0",
