--- a/build-spec.yaml
+++ b/build-spec.yaml
@@ -2,4 +2,4 @@ buildpacks:
   - name: nodejs
     options:
       node_version: 16.x
-      npm_install_args: --legacy-peer-deps
+      npm_install_args: --legacy-peer-deps --no-package-lock
